src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AE_Transfer_Date__c</fullName>
        <label>AE Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_Received_Date__c</fullName>
        <label>Addendum Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addendum Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addendum_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addendum Required? </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliated_Entities_Received_Date__c</fullName>
        <label>Affiliated Entities Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affiliated_Entities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliated Entities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Number of days since the initial application review.</description>
        <formula>NOW() -  Initial_Review_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since the initial application review.</inlineHelpText>
        <label>Age (in days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Outstanding_Count__c</fullName>
        <label>App Outstanding Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Received__c</fullName>
        <label>App Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Sent__c</fullName>
        <label>App Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never_Active</fullName>
                    <label>Never Active</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Previously_Active</fullName>
                    <label>Previously Active</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Credit_Risk_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Credit Risk Analyst</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Credit or Risk Analyst</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Credit Risk Analyst</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_PCS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned PCS</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 3) AND 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Partner Care Specialist</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Account Executive/PCS</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Partner Care Specialist Lead</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistance_Type__c</fullName>
        <label>Assistance Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Conference Call</fullName>
                </value>
                <value>
                    <fullName>Site visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <label>Billing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <label>Billing Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone_Number__c</fullName>
        <label>Billing Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Title__c</fullName>
        <label>Billing Contact Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Agreement_Received_Date__c</fullName>
        <label>Broker Agreement Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broker_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cell__c</fullName>
        <label>Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Certification_and_Authorization_Date__c</fullName>
        <label>Certification and Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_and_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification and Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Character_Checks_Received_Date__c</fullName>
        <label>Character Checks Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Character_Checks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Character Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Com_percent__c</fullName>
        <label>Com percent</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Flat_Amount__c</fullName>
        <label>Comp Flat Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comp_Maximum__c</fullName>
        <label>Comp Maximum</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comp_Minimum__c</fullName>
        <label>Comp Minimum</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_NMLS_ID_Expiration_Date__c</fullName>
        <label>Company NMLS ID Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_NMLS_ID_Issued_Date__c</fullName>
        <label>Company NMLS ID Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_NMLS_ID__c</fullName>
        <label>Company NMLS ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts_Count__c</fullName>
        <label>Contacts Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Resolution_Received_Date__c</fullName>
        <label>Corporate Resolution Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corporate_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditRisk_Brokerpckg_Days__c</fullName>
        <label>CreditRisk Brokerpckg Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditRisk_Complete_Days__c</fullName>
        <label>CreditRisk Complete Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditRisk_Days__c</fullName>
        <label>CreditRisk Escalated Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditRisk_Days_to_Process__c</fullName>
        <label>CreditRisk Days to Process</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditRisk_FullReview_Days__c</fullName>
        <label>CreditRisk FullReview Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditRisk_Inprocess_Days__c</fullName>
        <label>CreditRisk InitialReview Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Package_Change_Date__c</fullName>
        <label>Credit Risk Package Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Package_Status__c</fullName>
        <description>Pending Review: Not yet reviewed; 
Reviewing Documents: Received conditions, In line for review ;
Documents Required: Package reviewed. New or revised documents still needed;
Escalated Review: Decision pending escalated review</description>
        <inlineHelpText>Check Related for Status change History</inlineHelpText>
        <label>Credit Risk Package Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Review</fullName>
                </value>
                <value>
                    <fullName>Broker Package Incomplete</fullName>
                </value>
                <value>
                    <fullName>Full Review in Process</fullName>
                </value>
                <value>
                    <fullName>Escalated Review</fullName>
                    <label>Escalated</label>
                </value>
                <value>
                    <fullName>Review Complete</fullName>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Application Complete</fullName>
                    <isActive>false</isActive>
                    <label>Application Complete</label>
                </value>
                <value>
                    <fullName>Confirming Docs</fullName>
                    <isActive>false</isActive>
                    <label>Confirming Docs</label>
                </value>
                <value>
                    <fullName>Documents Required</fullName>
                    <isActive>false</isActive>
                    <label>Documents Required</label>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                    <isActive>false</isActive>
                    <label>Pending Review</label>
                </value>
                <value>
                    <fullName>Reviewing Documents</fullName>
                    <isActive>false</isActive>
                    <label>Reviewing Documents</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Risk_Process_Days__c</fullName>
        <formula>IF( 
    ISPICKVAL(Credit_Risk_Package_Status__c, 'Review Complete'),   
    (CreditRisk_Brokerpckg_Days__c + CreditRisk_Inprocess_Days__c + CreditRisk_FullReview_Days__c),
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Risk Process Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_user_is_Assigned_User__c</fullName>
        <formula>Assigned_Credit_Risk_Analyst__c = $User.Id ||  Assigned_PCS__c = $User.Id ||  Account_Executive_Name__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To check whether the assigned AE or CRA or PCS is the current user, for giving a list view</inlineHelpText>
        <label>Current user is Assigned User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Trained__c</fullName>
        <label>Date Trained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Process__c</fullName>
        <formula>App_Processed__c  -  App_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Denial_Reason__c</fullName>
        <label>Denial Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company lacks operational experience</fullName>
                </value>
                <value>
                    <fullName>Company has outstanding financial obligations</fullName>
                </value>
                <value>
                    <fullName>Company has negative background check</fullName>
                </value>
                <value>
                    <fullName>Company has no active license</fullName>
                </value>
                <value>
                    <fullName>Company had license revoked</fullName>
                </value>
                <value>
                    <fullName>Principal owner lacks mortgage origination experience</fullName>
                </value>
                <value>
                    <fullName>Principal owner has outstanding financial obligations</fullName>
                </value>
                <value>
                    <fullName>Principal owner has negative background check</fullName>
                </value>
                <value>
                    <fullName>Principal owner has no active license</fullName>
                </value>
                <value>
                    <fullName>Principal owner had license revoked</fullName>
                </value>
                <value>
                    <fullName>Principal owner has criminal hit(s)</fullName>
                </value>
                <value>
                    <fullName>Nonresponsive – Application Aged out</fullName>
                </value>
                <value>
                    <fullName>Unstable financial history</fullName>
                </value>
                <value>
                    <fullName>Insufficient LOX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docs_Needed_Days__c</fullName>
        <formula>TODAY() -  Documents_Required_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docs Needed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documents_Required_Date__c</fullName>
        <label>Documents Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dups__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_sign_Addendum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E-sign Addendum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exclusionary_Lists_Received_Date__c</fullName>
        <label>Exclusionary Lists Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusionary_Lists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusionary Lists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <label>Ext</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FDIC_NCUA_Certificate_Number__c</fullName>
        <label>FDIC/NCUA Certificate Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financials_Amount__c</fullName>
        <label>Financials Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financials_Received_Date__c</fullName>
        <label>Financials Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formation_Documents_Received_Date__c</fullName>
        <label>Formation Documents Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formation_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formation Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holding_Company_Federal_Tax_ID_Number_EI__c</fullName>
        <label>Federal Tax ID/EIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holding_Company_Federal_Tax_ID__c</fullName>
        <label>Holding Company Federal Tax ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holding_Company_Name__c</fullName>
        <label>Holding Company Name (if applicable)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_does_partner_obtain_leads__c</fullName>
        <label>How does partner obtain leads?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Referral Shop</fullName>
                </value>
                <value>
                    <fullName>Lead Buy</fullName>
                </value>
                <value>
                    <fullName>Company Website</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Review_Date_Time__c</fullName>
        <description>The date the application package was initially reviewed</description>
        <inlineHelpText>The date the application package was initially reviewed</inlineHelpText>
        <label>Initial Review Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interested_in_ORM_Supplied_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in ORM Supplied Leads?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Rollup Helper</description>
        <label>MLO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MLO</relationshipLabel>
        <relationshipName>MLO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Registration_date__c</fullName>
        <label>Last Contact Registration date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Individual_Lead_Activity__c</fullName>
        <label>Last Individual Lead Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_AppSent_Days__c</fullName>
        <label>Lead AppSent Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Approved_Days__c</fullName>
        <label>Lead Approved Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Days_to_Process__c</fullName>
        <description>This field is to calculate the total no of days for Lead status, In process to Approved</description>
        <label>Lead Days to Process</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Inprocess_days__c</fullName>
        <label>Lead InProcess Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Process_Days__c</fullName>
        <formula>IF(
    ISPICKVAL(Partner_Lead_Status__c, 'Approved'),
    (Lead_AppSent_Days__c + Lead_Inprocess_days__c + Lead_Prospect_Days__c),
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Process Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Prospect_Days__c</fullName>
        <label>Lead Prospect Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_status_change_date__c</fullName>
        <label>Lead status change date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Related_Fees_and_Related_PolicyDate__c</fullName>
        <label>Loan Related Fees &amp; Related Policy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Related_Fees_and_Related_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Related Fees and Related Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MARI_Background_Check_Received_Date__c</fullName>
        <label>MARI Background Check Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MARI_Background_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MARI Background Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MARI_Information__c</fullName>
        <label>MARI Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLO__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>MLO</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaillingAddress__c</fullName>
        <label>Mailling Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaillingState__c</fullName>
        <label>Mailling State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaillingStreet__c</fullName>
        <label>Mailling Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaillingZipcode__c</fullName>
        <label>Mailling Zipcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Phone__c</fullName>
        <label>Main Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NMLS_ID_Received_Date__c</fullName>
        <label>NMLS ID Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NMLS_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NMLS ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Affiliated_Partners__c</fullName>
        <inlineHelpText>Number of Affiliated Partners to the Business Partner. Please see 'Related' for more details.</inlineHelpText>
        <label>No. of Affiliated Partners</label>
        <summaryForeignKey>PartnerAffiliate__c.Related_Partner__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Branches__c</fullName>
        <label>No. of Branches</label>
        <summaryForeignKey>Branches__c.Business_Partners_Acc__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_QLMS_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-QLMS Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_HECMs_Closed_in_Last_Year__c</fullName>
        <label>Number of HECMs Closed in Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Registrations_in_last_12_month__c</fullName>
        <label>QLMS Loan Registrations in last 12months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_loan_officers__c</fullName>
        <label>Number of loan officers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORMS_Closed_Loans__c</fullName>
        <inlineHelpText>Number and loan amounts of closed loans. 
Closed loans are those that are in Closed, Awaiting Funding or Funded statuses.</inlineHelpText>
        <label>ORMS Closed Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORMS_Date_of_last_loan_registration__c</fullName>
        <inlineHelpText>Date of the last loan application request</inlineHelpText>
        <label>ORMS Date of last loan registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ORMS_Folder_Loans__c</fullName>
        <label>ORMS Folder Loans</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORMS_Number_of_Scenarios_Run__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ORMS Number of Scenarios Run</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORMS_Registrations__c</fullName>
        <inlineHelpText>Number of registrations the partner has requested</inlineHelpText>
        <label>ORMS Registrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORMS_Saved_Scenarios__c</fullName>
        <inlineHelpText>Number of scenarios that the partner has saved</inlineHelpText>
        <label>ORMS Saved Scenarios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORMS_Scenario_Packages__c</fullName>
        <inlineHelpText>Number of scenario packages the Partner has generated</inlineHelpText>
        <label>ORMS Scenario Packages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORM_Account_Executive_Email__c</fullName>
        <label>ORM Account Executive Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORM_Email__c</fullName>
        <description>This field has been created to use in Email Templates</description>
        <formula>Account_Executive_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORM_Phone__c</fullName>
        <description>This field is created to use in Email template</description>
        <formula>Account_Executive_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORM_Title__c</fullName>
        <description>This field has been created to use in Email Templates</description>
        <formula>Account_Executive_Name__r.Title</formula>
        <label>ORM Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboarding_status_change_date__c</fullName>
        <label>Onboarding status change date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_In_Lead_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In Lead Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Ownership_select_one__c</fullName>
        <label>Organization Ownership (select one)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Privately Held</fullName>
                </value>
                <value>
                    <fullName>Publicly Traded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Approved_Date__c</fullName>
        <description>Date when the Partner Lead is marked as Approved in the System</description>
        <inlineHelpText>Date when the Partner Lead is marked as Approved in the System</inlineHelpText>
        <label>Original Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Cell__c</fullName>
        <label>Other Contact Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Email__c</fullName>
        <label>Other Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Name__c</fullName>
        <label>Other Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Phone__c</fullName>
        <label>Other Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Title__c</fullName>
        <label>Other Contact Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Branch Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Secondary Market</fullName>
                </value>
                <value>
                    <fullName>Post Close Contact</fullName>
                </value>
                <value>
                    <fullName>Assistant Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processing Manager</fullName>
                </value>
                <value>
                    <fullName>Third Party Closer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_source_to_obtain_leads__c</fullName>
        <label>Other source to obtain leads</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Days__c</fullName>
        <formula>TODAY() -  App_Sent__c</formula>
        <label>Outstanding Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Amount_to_QLMS_AE__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Mention the amount that has already been paid to the QLMS AE for assistance in partner onboarding. Please add new amount paid to the existing value in this field.</inlineHelpText>
        <label>Paid Amount to QLMS AE</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>